2016-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Slight improvement in code generation.

2016-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Special case for int multiplication by 7 and 100.

2016-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Improve stm8 memcpy().
	* support/regression/tests/memory.c:
	  Better memcpy() test coverage.

2016-07-15 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Improve stm8 memcpy().

2016-07-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Partially unroll stm8 memcpy() for speed.
	* device/lib/stm8/strcmp.s:
	  Partially unroll stm8 strcmp() for speed.

2016-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c:
	  Fix bug #2522.
	* device/lib/stm8/memcpy.s,
	  device/lib/stm8/strcmp.s,
	  device/lib/*/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/incl.mk:
	  Provide handwritten memcpy(), strcmp() to improve stm8 Dhrystone scores.
	* sdas/astlcs90/t90mch.c:
	  Fix TLCS-90 assembler relocation issue for ld, reopened bug #2520.
	* src/stm8/peeph.def:
	  Some peepholes to remove redundant stm8 loads, to improve stm8 DMIPS by another 0.42%

2016-07-10 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90/t90mch.c:
	  Fix TLCS-90 assembler relocation issue for adc, bug #2520.

2016-07-06 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-920612-1.c
	  Disabled in test-host with gcc-6.

2016-06-30 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Check pointer qualifier in geniCodeReturn().
	* device/lib/_strstr.c
	* device/lib/_strchr.c
	* device/lib/_strrchr.c
	* support/regression/tests/gcc-torture-execute-920429-1.c
	  Supress warning 196.

2016-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/ds390/gen.c
	  Fix a bug in genCmp().
	* support/regression/tests/dhrystone.c
	  Enabled for ds390.
